[gd_scene load_steps=4 format=3 uid="uid://dpratar3w17ic"]

[ext_resource type="Theme" uid="uid://cxq38wk7w6ors" path="res://addons/bearware_tools/bundle-explorer/assets/theme.tres" id="1_btbwl"]
[ext_resource type="Script" uid="uid://bmjllc5getwjk" path="res://addons/bearware_tools/bundle-explorer/windows/sheet/elements/sheet_ref.gd" id="2_btbwl"]
[ext_resource type="Theme" uid="uid://bgxvnpdkfpiwh" path="res://addons/bearware_tools/bundle-explorer/assets/sub_label.tres" id="3_10jd2"]

[node name="SheetRef" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_btbwl")
script = ExtResource("2_btbwl")

[node name="Details" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Type" type="Label" parent="Details"]
layout_mode = 2
theme = ExtResource("3_10jd2")
text = "Sheet Reference"

[node name="DisplayName" type="Label" parent="Details"]
layout_mode = 2

[node name="UniqueName" type="Label" parent="Details"]
layout_mode = 2

[node name="RefUN" type="Label" parent="Details"]
layout_mode = 2
theme = ExtResource("3_10jd2")
text = "Unable to resolve UN"
autowrap_mode = 2
